added semantic backdoor

--- a/generate training command.ipynb
+++ b/generate training command.ipynb
@@ -1,99 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##MNIST\n",
-    "\n",
-    "attack = [\\\n",
-    "#           \"n_attacker_backdoor\", \n",
-    "#           \"n_attacker_labelFlipping\", \n",
-    "#           \"n_attacker_labelFlippingDirectional\",\n",
-    "          \"n_attacker_omniscient\"]\n",
-    "n_attackers=[\\\n",
-    "#              1,2,3,\\\n",
-    "             4,5]\n",
-    "GARs=[\"fedavg\",\"median\",\"deepGARNbh\"]  \n",
-    "GARs=[\"fedavg\",\"median\",\"baseline\",\"aggNetResidual\",\"aggNetBlocks\",\"aggNetBlocksMultiple\"]\n",
-    "GARs=[\"baseline\"]\n",
-    "# GARs=[\"aggNetBlocks\"]\n",
-    "print(\"\",file=open(\"batchjobs2.sh\",\"w\"))\n",
-    "for i in attack:\n",
-    "    for j in n_attackers:\n",
-    "        name=i.split(\"_\")[-1]+\"_\"+str(j)\n",
-    "        for gar in GARs:\n",
-    "            out = f\"python main.py --GAR {gar:<15} --attacks {name:<27} --{i} {j} --output_folder netRes_experiments --experiment_name \\\"iid/{name}/{gar}\\\" --dataset mnist --epochs 10\"\n",
-    "\n",
-    "            \n",
-    "            print(out,file=open(\"batchjobs2.sh\",\"a\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##MNIST\n",
-    "\n",
-    "attack = [\\\n",
-    "#           \"n_attacker_backdoor\", \n",
-    "#           \"n_attacker_labelFlipping\", \n",
-    "#           \"n_attacker_labelFlippingDirectional\",\n",
-    "          \"n_attacker_omniscient\"]\n",
-    "n_attackers=[\\\n",
-    "#              1,2,3,\\\n",
-    "             4,5]\n",
-    "GARs=[\"fedavg\",\"median\",\"deepGARNbh\"]  \n",
-    "GARs=[\"fedavg\",\"median\",\"baseline\",\"aggNetResidual\",\"aggNetBlocks\",\"aggNetBlocksMultiple\"]\n",
-    "GARs=[\"baseline\"]\n",
-    "GARs=[\"fedavg\",\"median\",\"baseline\",\"aggNetResidual\",\"aggNetBlocks\",\"aggNetBlocksMultiple\"]\n",
-    "\n",
-    "# GARs=[\"aggNetBlocks\"]\n",
-    "print(\"\",file=open(\"batchjobs2.sh\",\"w\"))\n",
-    "for i in attack:\n",
-    "    for j in n_attackers:\n",
-    "        name=i.split(\"_\")[-1]+\"_\"+str(j)\n",
-    "        for gar in GARs:\n",
-    "            out = f\"python main.py --GAR {gar:<15} --attacks {name:<27} --{i} {j} --output_folder netRes_experiments --experiment_name \\\"dirichlet/{name}/{gar}\\\" --dataset mnist --epochs 10\"\n",
-    "\n",
-    "            \n",
-    "            print(out,file=open(\"batchjobs2.sh\",\"a\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attack = [\\\n",
-    "#           \"n_attacker_backdoor\", \n",
-    "#           \"n_attacker_labelFlipping\", \n",
-    "#           \"n_attacker_labelFlippingDirectional\",\n",
-    "          \"n_attacker_omniscient\"\n",
-    "         ]\n",
-    "n_attackers=[\\\n",
-    "             1,2,3,4,\n",
-    "             5]\n",
-    "GARs=[\"fedavg\",\"median\",\"deepGARNbh\"]  \n",
-    "GARs=[\"fedavg\",\"median\",\"baseline\",\"aggNetResidual\",\"aggNetBlocks\",\"aggNetBlocksMultiple\"]\n",
-    "# GARs=[\"aggNetBlocks\"]\n",
-    "print(\"\",file=open(\"batchjobs.sh\",\"w\"))\n",
-    "for i in attack:\n",
-    "    for j in n_attackers:\n",
-    "        name=i.split(\"_\")[-1]+\"_\"+str(j)\n",
-    "        for gar in GARs:\n",
-    "            out = f\"python main.py --GAR {gar:<15} --attacks {name:<27} --{i} {j} --output_folder netRes_experiments --experiment_name \\\"cifar_iid/{name}/{gar}\\\" --dataset cifar --epochs 10\"\n",
-    "\n",
-    "            \n",
-    "            print(out,file=open(\"batchjobs.sh\",\"a\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +8,9 @@
     "\n",
     "to run jobs in parallel:\n",
     "\n",
-    "``` parallel --jobs 6 --delay 10 <batchjobs3.sh```\n"
+    "``` parallel --progress --tmux --jobs 2 --delay 10 <batchjobs.sh```\n",
+    "\n",
+    "to switch betwenn tmux: `ctrl+b`+`n`"
    ]
   },
   {
@@ -115,7 +24,8 @@
     "filename=\"batchjobs3.sh\"\n",
     "print(\"\",file=open(filename,\"w\"))\n",
     "attack = [\\\n",
-    "          \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
     "#           \"n_attacker_labelFlippingDirectional\",\n",
     "#           \"n_attacker_omniscient\"\n",
     "         ]\n",
@@ -143,6 +53,231 @@
     "            --dataset {dataset} --epochs {epochs}\"\n",
     "\n",
     "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"fedavg\"]\n",
+    "filename=\"batchjobs.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "#           \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "\n",
+    "for repeat in [0,1,2]:\n",
+    "# repeat=0\n",
+    "    gar=GARs[0]\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "            out = f\"python main.py --save_model_weights --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder semanticBackdoor \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"attention\"]\n",
+    "filename=\"batchjobs.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "#           \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='semanticBackdoor'\n",
+    "for repeat in [0,1,2]:\n",
+    "    \n",
+    "# repeat=0\n",
+    "    gar=GARs[0]\n",
+    "    \n",
+    "    name=f\"No_Attack({repeat})\"\n",
+    "    for gar in GARs:\n",
+    "        out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs}\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "    \n",
+    "    \n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "            out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"fedavg\"]\n",
+    "filename=\"batchjobs4.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='omniscient'\n",
+    "for repeat in [0,1,2]:\n",
+    "    \n",
+    "# repeat=0\n",
+    "    gar=GARs[0]\n",
+    "    \n",
+    "#     name=f\"No_Attack({repeat})\"\n",
+    "#     for gar in GARs:\n",
+    "#         out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "#         --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "#         --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "#         --dataset {dataset} --epochs {epochs}\"\n",
+    "#         print(out,file=open(filename,\"a\"))\n",
+    "    \n",
+    "    \n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "            out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"fedavg\"]\n",
+    "filename=\"batchjobs4.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "#           \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='labelFlipping'\n",
+    "for repeat in [0,1,2]:\n",
+    "    \n",
+    "# repeat=0\n",
+    "    gar=GARs[0]\n",
+    "    \n",
+    "#     name=f\"No_Attack({repeat})\"\n",
+    "#     for gar in GARs:\n",
+    "#         out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "#         --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "#         --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "#         --dataset {dataset} --epochs {epochs}\"\n",
+    "#         print(out,file=open(filename,\"a\"))\n",
+    "    \n",
+    "    \n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "            out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"median\",\"krum\",\"gm\"]\n",
+    "filename=\"batchjobs5.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "#           \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='semanticBackdoor'\n",
+    "for gar in GARs:\n",
+    "    for repeat in [0,1,2]:\n",
+    "\n",
+    "    # repeat=0\n",
+    "\n",
+    "\n",
+    "    #     name=f\"No_Attack({repeat})\"\n",
+    "    #     for gar in GARs:\n",
+    "    #         out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "    #         --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "    #         --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "    #         --dataset {dataset} --epochs {epochs}\"\n",
+    "    #         print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "        for i in attack:\n",
+    "            for j in n_attackers:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
    ]
   },
   {
@@ -396,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
