--- a/agg_experiments.ipynb
+++ b/agg_experiments.ipynb
@@ -6,89 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aggregator import attention\n",
-    "import convert_pca\n",
     "import utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "delta={\"a\":torch.Tensor([[1,0,0],[0,0,0],[0,0,0]]),\"b\":torch.Tensor([[1,0,0],[0,0,0],[0,0,0]])}\n",
-    "deltas=[delta]*5\n",
-    "deltas[0]={\"a\":torch.Tensor([[0,1,0],[0,0,0],[0,0,0]]),\"b\":torch.Tensor([[1,0,0],[0,0,0],[0,0,0]])}\n",
-    "# result=attention.main(deltas)\n",
-    "# print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stacked=utils.stackStateDicts(deltas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([18, 5])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "convert_pca.net2vec(stacked).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': tensor([[0., 1., 1., 1., 1.],\n",
-       "         [1., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.]]),\n",
-       " 'b': tensor([[1., 1., 1., 1., 1.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.],\n",
-       "         [0., 0., 0., 0., 0.]])}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stacked"
    ]
   },
   {
@@ -97,185 +15,231 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "a=torch.Tensor([[1,2,3,4,5,6],[7,8,9,10,11,12]])"
+    "import cifar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'a': tensor([[0., 1., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]),\n",
-       "  'b': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]])},\n",
-       " {'a': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]),\n",
-       "  'b': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]])},\n",
-       " {'a': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]),\n",
-       "  'b': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]])},\n",
-       " {'a': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]),\n",
-       "  'b': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]])},\n",
-       " {'a': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]),\n",
-       "  'b': tensor([[1., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]])}]"
+       "['conv1.weight',\n",
+       " 'bn1.weight',\n",
+       " 'bn1.bias',\n",
+       " 'bn1.running_mean',\n",
+       " 'bn1.running_var',\n",
+       " 'layer1.0.conv1.weight',\n",
+       " 'layer1.0.bn1.weight',\n",
+       " 'layer1.0.bn1.bias',\n",
+       " 'layer1.0.bn1.running_mean',\n",
+       " 'layer1.0.bn1.running_var',\n",
+       " 'layer1.0.conv2.weight',\n",
+       " 'layer1.0.bn2.weight',\n",
+       " 'layer1.0.bn2.bias',\n",
+       " 'layer1.0.bn2.running_mean',\n",
+       " 'layer1.0.bn2.running_var',\n",
+       " 'layer1.1.conv1.weight',\n",
+       " 'layer1.1.bn1.weight',\n",
+       " 'layer1.1.bn1.bias',\n",
+       " 'layer1.1.bn1.running_mean',\n",
+       " 'layer1.1.bn1.running_var',\n",
+       " 'layer1.1.conv2.weight',\n",
+       " 'layer1.1.bn2.weight',\n",
+       " 'layer1.1.bn2.bias',\n",
+       " 'layer1.1.bn2.running_mean',\n",
+       " 'layer1.1.bn2.running_var',\n",
+       " 'layer2.0.conv1.weight',\n",
+       " 'layer2.0.bn1.weight',\n",
+       " 'layer2.0.bn1.bias',\n",
+       " 'layer2.0.bn1.running_mean',\n",
+       " 'layer2.0.bn1.running_var',\n",
+       " 'layer2.0.conv2.weight',\n",
+       " 'layer2.0.bn2.weight',\n",
+       " 'layer2.0.bn2.bias',\n",
+       " 'layer2.0.bn2.running_mean',\n",
+       " 'layer2.0.bn2.running_var',\n",
+       " 'layer2.0.downsample.0.weight',\n",
+       " 'layer2.0.downsample.1.weight',\n",
+       " 'layer2.0.downsample.1.bias',\n",
+       " 'layer2.0.downsample.1.running_mean',\n",
+       " 'layer2.0.downsample.1.running_var',\n",
+       " 'layer2.1.conv1.weight',\n",
+       " 'layer2.1.bn1.weight',\n",
+       " 'layer2.1.bn1.bias',\n",
+       " 'layer2.1.bn1.running_mean',\n",
+       " 'layer2.1.bn1.running_var',\n",
+       " 'layer2.1.conv2.weight',\n",
+       " 'layer2.1.bn2.weight',\n",
+       " 'layer2.1.bn2.bias',\n",
+       " 'layer2.1.bn2.running_mean',\n",
+       " 'layer2.1.bn2.running_var',\n",
+       " 'layer3.0.conv1.weight',\n",
+       " 'layer3.0.bn1.weight',\n",
+       " 'layer3.0.bn1.bias',\n",
+       " 'layer3.0.bn1.running_mean',\n",
+       " 'layer3.0.bn1.running_var',\n",
+       " 'layer3.0.conv2.weight',\n",
+       " 'layer3.0.bn2.weight',\n",
+       " 'layer3.0.bn2.bias',\n",
+       " 'layer3.0.bn2.running_mean',\n",
+       " 'layer3.0.bn2.running_var',\n",
+       " 'layer3.0.downsample.0.weight',\n",
+       " 'layer3.0.downsample.1.weight',\n",
+       " 'layer3.0.downsample.1.bias',\n",
+       " 'layer3.0.downsample.1.running_mean',\n",
+       " 'layer3.0.downsample.1.running_var',\n",
+       " 'layer3.1.conv1.weight',\n",
+       " 'layer3.1.bn1.weight',\n",
+       " 'layer3.1.bn1.bias',\n",
+       " 'layer3.1.bn1.running_mean',\n",
+       " 'layer3.1.bn1.running_var',\n",
+       " 'layer3.1.conv2.weight',\n",
+       " 'layer3.1.bn2.weight',\n",
+       " 'layer3.1.bn2.bias',\n",
+       " 'layer3.1.bn2.running_mean',\n",
+       " 'layer3.1.bn2.running_var',\n",
+       " 'layer4.0.conv1.weight',\n",
+       " 'layer4.0.bn1.weight',\n",
+       " 'layer4.0.bn1.bias',\n",
+       " 'layer4.0.bn1.running_mean',\n",
+       " 'layer4.0.bn1.running_var',\n",
+       " 'layer4.0.conv2.weight',\n",
+       " 'layer4.0.bn2.weight',\n",
+       " 'layer4.0.bn2.bias',\n",
+       " 'layer4.0.bn2.running_mean',\n",
+       " 'layer4.0.bn2.running_var',\n",
+       " 'layer4.0.downsample.0.weight',\n",
+       " 'layer4.0.downsample.1.weight',\n",
+       " 'layer4.0.downsample.1.bias',\n",
+       " 'layer4.0.downsample.1.running_mean',\n",
+       " 'layer4.0.downsample.1.running_var',\n",
+       " 'layer4.1.conv1.weight',\n",
+       " 'layer4.1.bn1.weight',\n",
+       " 'layer4.1.bn1.bias',\n",
+       " 'layer4.1.bn1.running_mean',\n",
+       " 'layer4.1.bn1.running_var',\n",
+       " 'layer4.1.conv2.weight',\n",
+       " 'layer4.1.bn2.weight',\n",
+       " 'layer4.1.bn2.bias',\n",
+       " 'layer4.1.bn2.running_mean',\n",
+       " 'layer4.1.bn2.running_var',\n",
+       " 'fc.weight',\n",
+       " 'fc.bias']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deltas"
+    "utils.getFloatSubModules(cifar.Net().state_dict())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "weight=torch.Tensor([1.0/5]*5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.20000000298023224"
+       "ResNet(\n",
+       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (relu): ReLU(inplace=True)\n",
+       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (layer1): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer2): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer3): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer4): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  (fc): Linear(in_features=512, out_features=10, bias=True)\n",
+       ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weight[0].item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': tensor([[0.8000, 0.2000, 0.0000],\n",
-       "         [0.0000, 0.0000, 0.0000],\n",
-       "         [0.0000, 0.0000, 0.0000]]),\n",
-       " 'b': tensor([[1., 0., 0.],\n",
-       "         [0., 0., 0.],\n",
-       "         [0., 0., 0.]])}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "utils.applyWeight2StateDicts(deltas,weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[4., 1., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "book=list(zip(deltas,weight))\n",
-    "\n",
-    "sum([bookdeltas[i]['a'] for i in range(len(deltas))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10., 11., 12.])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.stack([a]*5,-1).view(-1,5)[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10., 11., 12.])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! cd aggregator"
+    "cifar.Net()"
    ]
   },
   {
@@ -302,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
