solved resource issue of over using cpu

--- a/generate training command.ipynb
+++ b/generate training command.ipynb
@@ -18,42 +18,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#prepare training data for aggNet\n",
-    "GARs=[\"fedavg\"]\n",
-    "filename=\"batchjobs3.sh\"\n",
-    "print(\"\",file=open(filename,\"w\"))\n",
-    "attack = [\\\n",
-    "          \"n_attacker_semanticBackdoor\",\n",
-    "#           \"n_attacker_backdoor\", \n",
-    "#           \"n_attacker_labelFlippingDirectional\",\n",
-    "#           \"n_attacker_omniscient\"\n",
-    "         ]\n",
-    "n_attackers=[\\\n",
-    "             1,2,3,4,]\n",
-    "dataset='cifar'\n",
-    "loader_type='dirichlet'\n",
-    "epochs=30\n",
-    "\n",
-    "for repeat in [2,3,4]:\n",
-    "# repeat=0\n",
-    "    name=f\"No_Attack({repeat})\"\n",
-    "    for gar in GARs:\n",
-    "        out = f\"python main.py --save_model_weights --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
-    "        --loader_type {loader_type} --output_folder netRes_experiments \\\n",
-    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
-    "        --dataset {dataset} --epochs {epochs}\"\n",
-    "        print(out,file=open(filename,\"a\"))\n",
-    "    for i in attack:\n",
-    "        for j in n_attackers:\n",
-    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
-    "            out = f\"python main.py --save_model_weights --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
-    "            --{i} {j} --loader_type {loader_type} --output_folder netRes_experiments \\\n",
-    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
-    "            --dataset {dataset} --epochs {epochs}\"\n",
-    "\n",
-    "            print(out,file=open(filename,\"a\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -134,6 +99,57 @@
     "        --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
     "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
     "        --dataset {dataset} --epochs {epochs}\"\n",
+    "\n",
+    "            print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"median\"]\n",
+    "filename=\"batchjobs_all_attacks2.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=True\n",
+    "    \n",
+    "# repeat=0\n",
+    "gar=GARs[0]\n",
+    "for repeat in [0,1,2]:\n",
+    "    name=f\"No_Attack({repeat})\"\n",
+    "    out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "    --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "    --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "    --dataset {dataset} --epochs {epochs} \"\n",
+    "    if save_model_weights:\n",
+    "        out+=\"--save_model_weights\"\n",
+    "    print(out,file=open(filename,\"a\"))\n",
+    "    \n",
+    "    \n",
+    "for i in attack:\n",
+    "    for j in n_attackers:\n",
+    "        for repeat in [0,1,2]:\n",
+    "            name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "            out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "            if save_model_weights:\n",
+    "                out+=\"--save_model_weights\"\n",
     "\n",
     "            print(out,file=open(filename,\"a\"))"
    ]
@@ -531,9 +547,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
