use torch svd for pca

--- a/generate training command.ipynb
+++ b/generate training command.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
     "filename=\"batchjobs_all_attacks2.sh\"\n",
     "print(\"\",file=open(filename,\"w\"))\n",
     "attack = [\\\n",
-    "#           \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
     "          \"n_attacker_backdoor\", \n",
     "          \"n_attacker_labelFlippingDirectional\",\n",
     "          \"n_attacker_omniscient\"\n",
     "         ]\n",
     "n_attackers=[\\\n",
     "             1,2,3,4,]\n",
-    "dataset='mnist'\n",
+    "dataset='cifar'\n",
     "loader_type='dirichlet'\n",
     "epochs=30\n",
     "outfolder='compareAllAttacks'\n",
