added more baselines

--- a/generate training command.ipynb
+++ b/generate training command.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for semantic backdoor\n",
     "GARs=[\"fedavg\",\"median\",\"gm\",\"mkrum\"]\n",
-    "filename=\"batchjobs_all_attacks2.sh\"\n",
+    "filename=\"batchjobs_all_attacks3.sh\"\n",
     "print(\"\",file=open(filename,\"w\"))\n",
     "attack = [\\\n",
     "          \"n_attacker_semanticBackdoor\",\n",
@@ -38,7 +38,7 @@
     "         ]\n",
     "n_attackers=[\\\n",
     "             1,2,3,4,]\n",
-    "dataset='cifar'\n",
+    "dataset='cifar100'\n",
     "loader_type='dirichlet'\n",
     "epochs=30\n",
     "outfolder='compareAllAttacks'\n",
@@ -73,10 +73,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"attention\"]\n",
+    "filename=\"batchjobs_cifar_attention.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "#           \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=True\n",
+    "\n",
+    "path_to_aggNet=\"./aggregator/attention_cifar_backdoor.pt\"\n",
+    "\n",
+    "for gar in GARs:\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [0]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} --path_to_aggNet \\\"{path_to_aggNet}\\\" \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))\n",
+    "                \n",
+    "path_to_aggNet=\"./aggregator/attention_cifar_modelPoisoning.pt\"\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "for gar in GARs:\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [0]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} --path_to_aggNet \\\"{path_to_aggNet}\\\" \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"residualbase\",\"foolsgold\",\"mkrum\"]\n",
+    "filename=\"batchjobs_missedExp.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "#           \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=False\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [1]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"residualbase\"]\n",
+    "filename=\"batchjobs_all_attacks8.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=False\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for repeat in [0]:\n",
+    "        name=f\"No_Attack({repeat})\"\n",
+    "        out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "        if save_model_weights:\n",
+    "            out+=\"--save_model_weights\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [0]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"foolsgold\"]\n",
+    "filename=\"batchjobs_all_attacks6.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "#           \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='mnist'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=True\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for repeat in [0]:\n",
+    "        name=f\"No_Attack({repeat})\"\n",
+    "        out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "        if save_model_weights:\n",
+    "            out+=\"--save_model_weights\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [0]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for eps in [0.001, 0.01,0.02,0.05,0.1, 0.5]:\n",
+    "    for c in [0.5,1,10, 20, 100]:\n",
+    "        print(f\"python aggregator/train_attention.py @aggregator/args --eps {eps} --scale {c}\",file=open(\"ablation cifar.sh\",\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\",file=open(\"ablation_cifar.sh\",\"w\"))\n",
+    "for eps in [0.001, 0.01,0.02,0.05,0.1, 0.5]:\n",
+    "    for c in [0.5,1,10, 20, 100]:\n",
+    "        print(f\"python aggregator/train_attention.py @aggregator/args_cifar --eps {eps} --scale {c}\",file=open(\"ablation_cifar.sh\",\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "python main.py --GAR fedavg          --attacks \"No_Attack(0)\"         --loader_type dirichlet --output_folder debug         --experiment_name \"debug\"         --dataset cifar100 --epochs 30 --save_model_weights\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python aggregator/train_attention.py @aggregator/args_cifar_backdoor --eps 0.01 --scale 10 "
+   ]
   }
  ],
  "metadata": {
